added Description in Simple EC2 Instance.yml, adding EC2 instance with parameter input.

--- a/EC2/Simple_EC2_Instance.yml
+++ b/EC2/Simple_EC2_Instance.yml
@@ -1,4 +1,5 @@
----
+AWSTemplateFormatVersion: 2010-09-09
+Description: Cloudformation Template to create basic EC2 Instance.
 Resources:
  SimpleEC2Instance:
   Type: AWS::EC2::Instance
